  then it needs to run a processEvents loop.)
* In ThreadsafeFace, don't automatically import it into the pyndn module since
  asyncio is optional. To explicitly import it, use:
  from pyndn.threadsafe_face import ThreadsafeFace
* In security ConfigPolicyManager, added load(input, inputName) to read
  configuration rules from a string.

Deprecated
* Deprecated KeyChain.createIdentity. Use createIdentityAndCertificate which
  returns the certificate name instead of the key name.
* In Interest, deprecated get/setScope since it is for NDNx and NFD does not use it.

Bug fixes
* http://redmine.named-data.net/issues/2846 Self-signed cert name needs a version component.
* http://redmine.named-data.net/issues/2847 Lower-case "ksk-" in generated key name.

PyNDN v2.0beta4 (2015-05-13)
----------------------------

Changes
* http://redmine.named-data.net/issues/2624 By default, throw an exception when
  using the deprecated NDNx and binary XML wire format. To enable support while
  you upgrade your code to use NFD, in your main application set
  WireFormat.ENABLE_NDNX = True
* http://redmine.named-data.net/issues/1921 In Face, added getMaxNdnPacketSize().
  expressInterest and putData throw an exception if the encoded size exceeds it.
* http://redmine.named-data.net/issues/2566 In Face, added setInterestFilter. In
  registerPrefix, make the onInterest callback optional.
* Face: In registerPrefix, changed the onInterest callback to pass interestFilterId
  instead of registeredPrefixId.
* http://redmine.named-data.net/issues/2579 In registerPrefix and setInterestFilter,
  support the onInterest callback form
  onInterest(prefix, interest, face, interestFilterId, filter).
  The new callback form is passed the Face instead of Transport so that you can
  supply the Data with face.putData(). It also takes the InterestFilter supplied
  to setInterestFilter.
* MemoryContentCache: In registerPrefix, changed the onDataNotFound callback to call